# jnif

./: CMakeLists.txt
src-libjnif/: base.cpp  jar.cpp  jnif.hpp  model.cpp  parser.cpp  writer.cpp
